# NuMath

./: .gitignore  CMakeLists.txt  README.md  main.c  main.cpp  numath.h  numath.pc.in
include/: numath.h
lib/: errorFunctions.cpp  errorFunctions.h  exceptions.h  interval.h  methodNamesConstants.h  piecewiseFunction.h  point.h  statusConstants.h
src/: main_test.c  main_test.cpp
src/differentiation/: differentiation.cpp  differentiation.h
src/integration/: simpsonOneThird.cpp  simpsonOneThird.h  simpsonThreeEighths.cpp  simpsonThreeEighths.h  trapezium.cpp  trapezium.h
src/interpolation/: cubicSpline.cpp  cubicSpline.h  lagrange.cpp  lagrange.h  linearSpline.cpp  linearSpline.h  newton.cpp  newton.h  newtonInterp.cpp  newtonInterp.h  quadraticSpline.cpp  quadraticSpline.h
src/singleVariableEquations/: bisection.c  bisection.cpp  bisection.h  falsePosition.cpp  incrementalSearch.c  incrementalSearch.cpp  incrementalSearch.h  printTable.cpp  printTable.h
src/singleVariableEquations/closedMethods/: bisection.cpp  bisection.h  falsePosition.cpp  falsePosition.h
src/singleVariableEquations/openMethods/: fixedPoint.cpp  fixedPoint.h  multipleRoots.cpp  multipleRoots.h  newton.cpp  newton.h  secant.cpp  secant.h
src/systemsOfEquations/: gaussianElimination.cpp  gaussianElimination.h  gaussianEliminationPartialPivot.cpp  gaussianEliminationPartialPivot.h  gaussianEliminationTotalPivot.cpp  gaussianEliminationTotalPivot.h
src/systemsOfEquations/directFactoring/: choleskyMethod.cpp  choleskyMethod.h  croutMethod.cpp  croutMethod.h  doolittleMethod.cpp  doolittleMethod.h
src/systemsOfEquations/directFactorization/: choleskyMethod.cpp  choleskyMethod.h  croutMethod.cpp  croutMethod.h  doolittleMethod.cpp  doolittleMethod.h
src/systemsOfEquations/gaussianElimination/: gaussianElimination.cpp  gaussianElimination.h  gaussianEliminationPartialPivot.cpp  gaussianEliminationPartialPivot.h  gaussianEliminationTotalPivot.cpp  gaussianEliminationTotalPivot.h
src/systemsOfEquations/iterativeMethods/: gaussSeidel.cpp  gaussSeidel.h  jacobi.cpp  jacobi.h  solveIterative.cpp  solveIterative.h
